--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <?php 
-      include '/src/php/navbar.php';
-    ?>
+    <div w3-include-html="header.html"></div>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
