--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/custom.js"></script>
     <link rel="shortcut icon" href="img/favicon.ico">
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <header>
+        <a>honda</a>
+    </header>
 </head>
