--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <div w3-include-html="header.html"></div>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <header>
+      <a>honda</a>
+    </header>
   </head>
+  
   <body>
     <div id="app"></div>
   </body>
