--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <title>Used Hondas</title>
     <header>
-      <a>honda</a>
+      <a>Used Hondas</a>
     </header>
   </head>
-  
+
   <body>
     <div id="app"></div>
   </body>
